# worker

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  config.yml  full_build.bat  full_build.sh  pyproject.toml
gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
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/: registry.json
profiles/: linux_clang15.txt  linux_gcc13.txt  macos_clang14.txt  windows_msvc17.txt
src/: backend.py  main.py  model_host.py  worker.py
src/engines/: base.py  llama_cpp_engine.py
src/models/: __init__.py  model_host.py  model_manager.py
src/utils/: enums.py  get_port.py  local_characteristics.py
