[project]
name = "worker"
version = "0.1.0"
description = ""
authors = [
    {name = "rexologue",email = "mironovigoroffical@gmail.com"}
]
readme = "README.md"
requires-python = "<3.13, >=3.12"
dependencies = [
    "conan (>=2.19.1,<3.0.0)",
    "pyinstaller (>=6.15.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
