[tool.poetry]
name = "nal-net-worker"
version = "0.1.0"
description = "NAL NET Worker — a tool that helps monetize your hardware via running AI models"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
aiosock = { git = "ssh://git@gitlab.nal.digital:1469/nal-common-team/shared/aiosock.git", branch = "release" }
pyinstaller = ">=6.15.0,<7.0.0"
conan = ">=2.19.1,<3.0.0"
llama-cpp-python = "^0.3.9"
torch = "^2.2"
sse-starlette = "^2.3.5"
starlette-context = "^0.4.0"
pydantic-settings = "^2.9.1"
pyyaml = "^6.0.2"
huggingface-hub = "^0.34.4"

[tool.poetry.group.gpu.dependencies]
vllm = "^0.8.5.post1"
xformers = "^0.0.29.post2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
